--- a/.github/workflows/spelling_lint.yml
+++ b/.github/workflows/spelling_lint.yml
@@ -22,7 +22,7 @@ jobs:
           pip install codespell
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Check spelling with codespell
-        run: codespell --ignore-words=codespell.txt || exit 1
+        run: codespell --ignore-words=codespell.txt  --skip="./core/public,./core/app/assets" || exit 1
   misspell:
     name: Check spelling all files in commit with misspell
     runs-on: ubuntu-latest
